<resources>
    <string name="app_name">algoengine</string>
    <string name="camera_setting">Camera</string>
    <string name="path_settings">System apps/Camera/Settings</string>
    <string name="search_settings">Camera settings;Quality;Image quality;Image location;Picture location;Face detection;Camera sound</string>
    <string name="hibernate_hint">Tap the screen to wake Camera</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your device."</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">AnX Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">SD card is full</string>
    <string name="preparing_sd">Checking SD card…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="confirm_restore_title">Restore default settings</string>
    <string name="confirm_restore_message">"Restore Camera's default settings?"</string>
    <string name="confirm_location_title">Remember photo locations?</string>
    <string name="confirm_location_message">Tag your photos and videos with the locations where they are taken. Other apps can access this information along with your saved images.</string>
    <string name="confirm_location_alert">Remember photo locations</string>
    <string name="start_capture">OK</string>
    <string name="pref_camera_recordlocation_title">Save location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_proximity_lock_title">Pocket mode</string>
    <string name="pref_camera_proximity_lock_summary">Lock touch gestures when placed in a pocket</string>
    <string name="screen_on_proximity_sensor_summary">"Don't cover the earphone area"</string>
    <string name="screen_on_proximity_sensor_hint">To turn this feature off, press the Volume up and Back buttons simultaneously.</string>
    <string name="pref_front_mirror_title">Mirror front camera</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_summary">4K video cannot be supported in 120FPS mode</string>
    <string name="pref_video_hfr_title">Video HFR</string>
    <string name="pref_video_quality_default">6</string>
    <string name="pref_mi_front_video_quality_default">6</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_value_4kuhd">8</string>
    <string name="pref_video_quality_entry_value_4kuhd_60fps">8,60</string>
    <string name="pref_video_quality_entry_value_1080p_60fps">6,60</string>
    <string name="pref_video_quality_entry_value_720p_60fps">5,60</string>
    <string name="pref_video_quality_value_autozoom">6</string>
    <string name="pref_video_quality_entry_4kuhd">UHD 4K, 30fps</string>
    <string name="pref_video_quality_entry_4kuhd_60fps">UHD 4K, 60fps</string>
    <string name="pref_video_quality_entry_1080p">FHD 1080p, 30fps</string>
    <string name="pref_video_quality_entry_1080p_60fps">FHD 1080p, 60fps</string>
    <string name="pref_video_quality_entry_720p">HD 720p</string>
    <string name="pref_video_quality_entry_720p_60fps">HD 720p, 60fps</string>
    <string name="pref_video_quality_entry_480p">SD 480p</string>
    <string name="pref_new_slow_motion_video_quality_entry_1080p">FHD 1080p</string>
    <string name="pref_new_slow_motion_video_quality_entry_720p">HD 720p</string>
    <string name="pref_new_slow_motion_video_quality_240_720only">You can only record 720p videos with 240fps</string>
    <string name="pref_new_slow_motion_video_quality_960_720only">You can only record 720p videos with 960fps</string>
    <string name="pref_video_encoder_title">Video encoder</string>
    <string name="pref_video_encoder_entry_h264">H.264 High compatibility</string>
    <string name="pref_video_encoder_entry_h265">H.265 High performance</string>
    <string name="pref_video_encoder_default">h264</string>
    <string name="pref_video_hfr_entryvalue_default">1920x1080:120</string>
    <string name="camera_new_slow_motion_quality_default">5</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">2X (0.06-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">4X (0.12-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">10X (0.3-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">30X (1 second)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">60X (2-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">90X (3-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">120X (4-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">150X (5-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">240X (8-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">300X (10-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">450X (15-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">900X (30-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">1800X (60-second interval)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_jpegquality_default">@string/pref_camera_jpegquality_value_high</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_contrast_default">5</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_default">3</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_sharpness_default">1</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_antibanding_title">Anti banding</string>
    <string name="pref_camera_antibanding_default">1</string>
    <string name="pref_camera_autoexposure_title">Auto exposure settings</string>
    <string name="pref_camera_autoexposure_default">1</string>
    <string name="pref_video_autoexposure_default">1</string>
    <string name="pref_camera_facedetection_title">Face detection</string>
    <string name="pref_camera_facedetection_auto_hidden_title">Hide face detection frame automatically</string>
    <string name="camera_settings_label">Camera</string>
    <string name="pref_camera_referenceline_title">Show gridlines</string>
    <string name="pref_camera_volumekey_function_title">Volume buttons function</string>
    <string name="pref_camera_volumekey_function_default">timer</string>
    <string name="pref_video_volumekey_function_default">shutter</string>
    <string name="pref_live_volumekey_function_default">volume</string>
    <string name="pref_camera_movie_solid_default">true</string>
    <string name="pref_camera_movie_solid_title">Image stabilization</string>
    <string name="pref_camera_watermark_title">Add time stamp on photos</string>
    <string name="pref_camera_device_watermark_title">Device watermark</string>
    <string name="pref_userdefine_watermark_title">Custom watermark</string>
    <string name="pref_scan_qrcode_title">Scan QR codes</string>
    <string name="pref_scan_qrcode_summary">Only the rear camera can scan QR codes in the \"Photo\" mode.</string>
    <string name="pref_scan_qrcode_default">true</string>
    <string name="pref_priority_storage_title">Save to SD card</string>
    <string name="pref_camera_settings">Device</string>
    <string name="pref_capture_settings">Camera</string>
    <string name="pref_camcorder_settings">Video</string>
    <string name="pref_advance_settings">Additional settings</string>
    <string name="pref_camera_auto_chroma_flash_title">Chroma flash</string>
    <string name="pref_camera_auto_capture_when_stable_title">Capture selected objects when stationary</string>
    <string name="pref_camera_auto_capture_when_stable_summary">To select an object, tap two diagonal points around its border. When the object is stationary, the camera will snap a shot automatically.</string>
    <string name="pref_front_mirror_default">on</string>
    <string name="pref_camera_long_pressing_shutter_title">Press &amp; hold Shutter button to lock AE/AF/AWB</string>
    <string name="pref_camera_long_press_shutter_feature_title">Press &amp; hold Shutter button</string>
    <string name="pref_camera_long_press_shutter_feature_default">burst</string>
    <string name="pref_camera_asd_night_title">Enhance lowlight photos automatically</string>
    <string name="pref_camera_snap_enable_title">Quick snap mode</string>
    <string name="pref_camera_snap_default">@string/pref_camera_snap_value_off</string>
    <string name="pref_camera_portrait_with_facebeauty_title">Beautify in Portrait mode</string>
    <string name="pref_camera_dual_enable_title">Turn on dual camera</string>
    <string name="pref_camera_dual_sat_enable_title">Turn on dual SAT camera</string>
    <string name="pref_camera_parallel_process_enable_title">Turn on parallel processing</string>
    <string name="pref_groupshot_with_primitive_title">Save original photos as well</string>
    <string name="pref_privacy_title">Privacy Policy</string>
    <string name="pref_camera_focus_shoot_title">Focus &amp; shoot</string>
    <string name="pref_camera_focus_shoot_summary">Tap to focus, then tap again to take a photo.</string>
    <string name="pref_retain_camera_mode_title">Save previous mode</string>
    <string name="pref_retain_camera_mode_summary">Switch camera to the previously used mode when you open the app.</string>
    <string name="pref_fingerprint_capture_title">Fingerprint shutter</string>
    <string name="pref_camera_mfnr_sat_enable_title">Turn on MFNR</string>
    <string name="pref_camera_sr_enable_title">Turn on SR</string>
    <string name="pref_camera_ultra_wide_ldc_title">Correct distortion in ultra wide shots</string>
    <string name="pref_camera_ultra_wide_ldc_description">Correct distorted objects automatically</string>
    <string name="pref_camera_normal_wide_ldc_title">Correct face distortions on group photos</string>
    <string name="pref_camera_normal_wide_ldc_description">Correct distorted faces of the people who are close to the edge of the frame</string>
    <string name="live_music_change_bgm">Change background music</string>
    <string name="live_music_hot_title">Popular songs</string>
    <string name="live_music_local_title">Local</string>
    <string name="mimoji_detect_tips">请把脸放在取景框内</string>
    <string name="mimoji_cancle">cancle</string>
    <string name="mimoji_back">back</string>
    <string name="mimoji_confirm">confirm</string>
    <string name="mimoji_editor">edit</string>
    <string name="mimoji_save">save</string>
    <string name="mimoji_recapture">recapture</string>
    <string name="mimoji_selected">select</string>
    <string name="mimoji_edit_mimoji">edit emoji</string>
    <string name="mimoji_delete_mimoji">delete emoji</string>
    <string name="pref_camera_live_sticker_internal_title">Internal magic tools</string>
</resources>