<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/camera_settings_label"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.camera">
    <PreferenceCategory android:title="@string/pref_camera_settings" android:key="category_device_setting">
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_recordlocation_title" android:key="pref_camera_recordlocation_key" android:defaultValue="@string/pref_camera_recordlocation_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_sound_title" android:key="pref_camerasound_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_proximity_lock_title" android:key="pref_camera_proximity_lock_key" android:summary="@string/pref_camera_proximity_lock_summary" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_priority_storage_title" android:key="pref_priority_storage" android:defaultValue="@bool/priority_storage" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_retain_camera_mode_title" android:key="pref_retain_camera_mode_key" android:summary="@string/pref_retain_camera_mode_summary" android:defaultValue="false" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_snap_entries" android:title="@string/pref_camera_snap_enable_title" android:key="pref_camera_snap_key" android:defaultValue="@string/pref_camera_snap_default" android:entryValues="@array/pref_camera_snap_entryvalues" camera:labelList="@array/pref_camera_snap_labels" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_front_mirror_entries" android:title="@string/pref_front_mirror_title" android:key="pref_front_mirror_key" android:defaultValue="@string/pref_front_mirror_default" android:entryValues="@array/pref_front_mirror_entryvalues" camera:labelList="@array/pref_front_mirror_labels" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_capture_settings" android:key="category_camera_setting">
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_auto_capture_when_stable_title" android:key="pref_capture_when_stable_key" android:summary="@string/pref_camera_auto_capture_when_stable_summary" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_watermark_title" android:key="pref_watermark_key" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_device_watermark_title" android:key="pref_dualcamera_watermark" android:defaultValue="@bool/pref_device_watermark_default" />
        <Preference android:persistent="false" android:title="@string/pref_userdefine_watermark_title" android:key="user_define_watermark" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_auto_chroma_flash_title" android:key="pref_auto_chroma_flash_key" android:defaultValue="@bool/pref_camera_auto_chroma_flash_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_referenceline_title" android:key="pref_camera_referenceline_key" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_ultra_wide_ldc_title" android:key="pref_camera_ultra_wide_ldc_key" android:summary="@string/pref_camera_ultra_wide_ldc_description" android:defaultValue="@bool/pref_camera_ultra_wide_ldc_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_normal_wide_ldc_title" android:key="pref_camera_normal_wide_ldc_key" android:summary="@string/pref_camera_normal_wide_ldc_description" android:defaultValue="@bool/pref_camera_normal_wide_ldc_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_focus_shoot_title" android:key="pref_camera_focus_shoot_key" android:summary="@string/pref_camera_focus_shoot_summary" android:defaultValue="false" />
        <com.android.camera.preferences.QRCodePreference android:persistent="false" android:title="@string/pref_scan_qrcode_title" android:key="pref_scan_qrcode_key" android:summary="@string/pref_scan_qrcode_summary" android:defaultValue="@string/pref_scan_qrcode_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_asd_night_title" android:key="pref_camera_asd_night_key" android:defaultValue="@bool/pref_camera_asd_night_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_long_pressing_shutter_title" android:key="pref_camera_long_press_shutter_key" android:defaultValue="@bool/pref_camera_long_pressing_shutter_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_groupshot_with_primitive_title" android:key="pref_groupshot_with_primitive_picture_key" android:defaultValue="@bool/pref_groupshot_with_primitive_default" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_long_press_shutter_feature_entries" android:title="@string/pref_camera_long_press_shutter_feature_title" android:key="pref_camera_long_press_shutter_feature_key" android:defaultValue="@string/pref_camera_long_press_shutter_feature_default" android:entryValues="@array/pref_camera_long_press_shutter_feature_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_front_mirror_entries" android:title="@string/pref_front_mirror_title" android:key="pref_front_mirror_key" android:defaultValue="@string/pref_front_mirror_default" android:entryValues="@array/pref_front_mirror_entryvalues" camera:labelList="@array/pref_front_mirror_labels" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:title="@string/pref_camera_picturesize_title_simple_mode" android:key="pref_camera_picturesize_key" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_jpegquality_entries" android:title="@string/pref_camera_jpegquality_title" android:key="pref_camera_jpegquality_key" android:defaultValue="@string/pref_camera_jpegquality_default" android:entryValues="@array/pref_camera_jpegquality_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_camcorder_settings" android:key="category_camcorder_setting">
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_movie_solid_title" android:key="pref_camera_movie_solid_key" android:defaultValue="@string/pref_camera_movie_solid_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_ultra_wide_ldc_title" android:key="pref_camera_ultra_wide_video_ldc_key" android:summary="@string/pref_camera_ultra_wide_ldc_description" android:defaultValue="@bool/pref_camera_ultra_wide_ldc_default" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_quality_entries" android:title="@string/pref_video_quality_title" android:key="pref_video_quality_key" android:defaultValue="@array/pref_video_quality_default_values" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_quality_entries" android:title="@string/pref_video_quality_title" android:key="pref_video_quality_key_extra" android:defaultValue="@array/pref_video_quality_default_values" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_encoder_entries" android:title="@string/pref_video_encoder_title" android:key="pref_video_encoder_key" android:defaultValue="@string/pref_video_encoder_default" android:entryValues="@array/pref_video_encoder_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_new_slow_motion_entries" android:title="@string/pref_video_hfr_title" android:key="pref_video_new_slow_motion_key" android:defaultValue="@string/camera_new_slow_motion_quality_default" android:entryValues="@array/pref_video_new_slow_motion_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_hfr_entries" android:title="@string/pref_video_hfr_title" android:key="pref_video_hfr_key" android:defaultValue="@string/pref_video_hfr_entryvalue_default" android:entryValues="@array/pref_video_hfr_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_time_lapse_frame_interval_entries" android:title="@string/pref_video_time_lapse_frame_interval_title" android:key="pref_video_time_lapse_frame_interval_key" android:defaultValue="@string/pref_video_time_lapse_frame_interval_default" android:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_advance_settings" android:key="category_advance_setting">
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_live_sticker_internal_title" android:key="pref_camera_live_sticker_internal" android:defaultValue="@bool/pref_camera_live_sticker_internal_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_facedetection_title" android:key="pref_camera_facedetection_key" android:defaultValue="@bool/pref_camera_facedetection_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_facedetection_auto_hidden_title" android:key="pref_camera_facedetection_auto_hidden_key" android:defaultValue="@bool/pref_camera_facedetection_auto_hidden_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_portrait_with_facebeauty_title" android:key="pref_camera_portrait_with_facebeauty_key" android:defaultValue="@bool/pref_camera_portrait_with_facebeauty_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_dual_enable_title" android:key="pref_camera_dual_enable_key" android:defaultValue="@bool/pref_camera_dual_enable_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_dual_sat_enable_title" android:key="pref_camera_dual_sat_enable_key" android:defaultValue="@bool/pref_camera_dual_sat_enable_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_mfnr_sat_enable_title" android:key="pref_camera_mfnr_sat_enable_key" android:defaultValue="@bool/pref_camera_mfnr_sat_enable_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_sr_enable_title" android:key="pref_camera_sr_enable_key" android:defaultValue="@bool/pref_camera_sr_enable_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_camera_parallel_process_enable_title" android:key="pref_camera_parallel_process_enable_key" android:defaultValue="@bool/pref_camera_parallel_process_enable_default" />
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_fingerprint_capture_title" android:key="pref_fingerprint_capture_key" android:defaultValue="false" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_volumekey_function_entries" android:title="@string/pref_camera_volumekey_function_title" android:key="pref_camera_volumekey_function_key" android:defaultValue="@string/pref_camera_volumekey_function_default" android:entryValues="@array/pref_camera_volumekey_function_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_video_volumekey_function_entries" android:title="@string/pref_camera_volumekey_function_title" android:key="pref_video_volumekey_function_key" android:defaultValue="@string/pref_video_volumekey_function_default" android:entryValues="@array/pref_video_volumekey_function_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_live_volumekey_function_entries" android:title="@string/pref_camera_volumekey_function_title" android:key="pref_live_volumekey_function_key" android:defaultValue="@string/pref_live_volumekey_function_default" android:entryValues="@array/pref_live_volumekey_function_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_antibanding_entries" android:title="@string/pref_camera_antibanding_title" android:key="pref_camera_antibanding_key" android:defaultValue="@string/pref_camera_antibanding_default" android:entryValues="@array/pref_camera_antibanding_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_autoexposure_entries" android:title="@string/pref_camera_autoexposure_title" android:key="pref_camera_autoexposure_key" android:defaultValue="@string/pref_camera_autoexposure_default" android:entryValues="@array/pref_camera_autoexposure_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_autoexposure_entries" android:title="@string/pref_camera_autoexposure_title" android:key="pref_video_autoexposure_key" android:defaultValue="@string/pref_video_autoexposure_default" android:entryValues="@array/pref_camera_autoexposure_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_contrast_entries" android:title="@string/pref_camera_contrast_title" android:key="pref_qc_camera_contrast_key" android:defaultValue="@string/pref_camera_contrast_default" android:entryValues="@array/pref_camera_contrast_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_saturation_entries" android:title="@string/pref_camera_saturation_title" android:key="pref_qc_camera_saturation_key" android:defaultValue="@string/pref_camera_saturation_default" android:entryValues="@array/pref_camera_saturation_entryvalues" />
        <com.android.camera.ui.PreviewListPreference android:persistent="false" android:entries="@array/pref_camera_sharpness_entries" android:title="@string/pref_camera_sharpness_title" android:key="pref_qc_camera_sharpness_key" android:defaultValue="@string/pref_camera_sharpness_default" android:entryValues="@array/pref_camera_sharpness_entryvalues" />
    </PreferenceCategory>
    <Preference android:persistent="false" android:title="@string/pref_privacy_title" android:key="pref_privacy" />
    <Preference android:persistent="false" android:title="@string/confirm_restore_title" android:key="pref_restore" />
</PreferenceScreen>