<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/bg_mimoji_dialog_corner" android:layout_width="210.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/mimoji_selected" style="@style/mimojiTextGray" />
    <View android:background="@color/color_999999" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/tv_edit" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/mimoji_edit_mimoji" style="@style/mimojiTextBlack" />
    <View android:background="@color/color_999999" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/tv_dialog_delete" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/mimoji_delete_mimoji" style="@style/mimojiTextBlack" />
    <View android:background="@color/color_999999" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <TextView android:textColor="@color/color_999999" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_cancle" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/mimoji_cancle" style="@style/mimojiTextGray" />
</LinearLayout>